--- a/modules/setting.ini
+++ b/modules/setting.ini
@@ -9,6 +9,7 @@ mongodb.database    =   pooshlingang01
 [File_Storage]
 fs.import       =   /var/import/
 fs.storage      =   /var/data/rtu1.1/
+fs.dws          =   /var/dws/
 fs.cache        =   /var/cache/
 
 [Logging]
