--- a/modules/setting.ini
+++ b/modules/setting.ini
@@ -4,7 +4,7 @@ system.project.current  = shlingang
 [Database]
 mongodb.base    =   dws0:base
 mongodb.client  =   mongodb://dws0:27017/
-mongodb.database    =   pooshlingang01
+mongodb.database    =   pooshlingang
 
 [File_Storage]
 fs.import       =   /var/import/
